--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header class=""></app-header>
 <ngx-loading-bar></ngx-loading-bar>
 <router-outlet class="main"></router-outlet>
-<!-- <app-footer></app-footer> -->
+<app-footer></app-footer>
