--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,8 @@
-<div class="ui pointer vertical footer segment blockquote-footer form-page">
-  <div class="ui center aligned container">
-    &copy;&nbsp; Copyright 2018 &nbsp;|&nbsp;&nbsp;developer.io &nbsp;&nbsp;|&nbsp;&nbsp; All rights received
+<footer class="ui pointer horizontal footer fixed-bottom divider">
+  <div class="ui center aligned">
+    &copy;&nbsp; <a href="http://www.pornhub.com" class="item">PornHub</a> &nbsp;|&nbsp;&nbsp;<a href="http://www.redtube.com" class="item">Redtube</a> &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://www.spankwire.com" class="item">Spankwire</a>
+    |&nbsp;&nbsp;<a href="https://icons8.com/icon/33174/vagina">Vagina icon by Icons8</a>
   </div>
-</div>
+
+</footer>
+
