--- a/src/app/video-playback/video-playback.component.html
+++ b/src/app/video-playback/video-playback.component.html
@@ -1,4 +1,4 @@
-<div  fxFlex="2%">
+<div  fxFlex="2%" class="main">
     <a href="http://www.pornhub.com?utm_source=paid&utm_medium=hubtraffic&utm_campaign=hubtraffic_mindlo" id="rt_aff_banner_511" border="0" target="_blank"><img alt="Free porn videos" border="0" src="https://www.hubtraffic.com/_affiliate/banners/1543859987.png"/></a></div>
 <div class="row text-center main-div" fxLayout="row" fxLayoutAlign="center">
     <a href="http://www.pornhub.com?utm_source=paid&utm_medium=hubtraffic&utm_campaign=hubtraffic_mindlo" id="rt_aff_banner_519" border="0" target="_blank"><img alt="Free porn videos" border="0" src="https://www.hubtraffic.com/_affiliate/banners/1543860106.png"/></a>
