--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,7 +1,6 @@
-@media (min-height: 320px) {
-  .ui.footer.form-page { /* Increased specificity for SO snippet priority */
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-  }
-}
+/* footer{
+  position:fixed;
+  bottom:0px;
+  background-color:pink;
+  width:100%;
+  } */
