--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,9 +12,9 @@
       <div class="right menu">
         <div class="item">
           <div class="ui transparent icon input">
-            <input [(ngModel)]="term" (keyup.enter)="search(term)" type="text" placeholder="Search...">
+            <input [(ngModel)]="term" (keyup.enter)="search()" type="text" placeholder="Search...">
             <i class="search link icon"
-            (click)="search(term)"></i>
+            (click)="search()"></i>
           </div>
         </div>
       </div>
